# recipe_optim

./: .gitignore  Cargo.toml  README.MD  ciqual.csv  my_recipe.txt  my_recipe_optimized.json
src/: cli.rs  lib.rs  main.rs  nutritional_matcher.rs  recipe_aggregator.rs  recipe_converter.rs  recipe_parser.rs
src/api_connection/: connection.rs  endpoints.rs  mod.rs
src/optim/: mod.rs  nutri_eval.rs  optimizer.rs  targets.rs
src/search/: ann_engine.rs  data_loader.rs  embedding_engine.rs  mod.rs  nano_vector_db.rs
tests/: api_integration_tests.rs
