[package]
name = "recipe_optim"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
hora = "0.1.0"
model2vec-rs = "0.1.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
