[package]
name = "recipe_optim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
csv = "1.3"
dotenv = "0.15.0"
# hora = "0.1.0" # Removed
model2vec-rs = "0.1.0" 
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs"] }
clap = { version = "4.5.11", features = ["derive"] }

# Dependencies for nano_vector_db.rs
rayon = "1.10.0" 
base64 = "0.22.0" 
bytemuck = { version = "1.15.0", features = ["derive"] } 

[dev-dependencies]
rand = "0.8"
tempfile = "3.10"
